# Scrapebee

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: analyze_dump.py  dump_home.py  inspect_dom.py  inspect_intro.py  inspect_links.py  inspect_list_page.py  inspect_product_db.py  read_log.py  verify_fix.py
src/scrapebee/: app.py
src/scrapebee/core/: base_scraper.py  generic_scraper.py  legacy_universal_scraper.py  legacy_universal_scraper_v2.py  pdf_processor.py  scraper.py  universal_scraper.py
tests/: test_browser.py  test_extraction_id217.py  test_extraction_static.py  test_net.py  test_requests.py  test_selenium_v2.py  test_sitemap.py
